Added some hosts

--- a/hosts.yml
+++ b/hosts.yml
@@ -1,1 +1,12 @@
 ---
+access_points:
+  hosts:
+    basement:
+      ansible_host: 172.16.1.30
+    attic:
+      ansible_host: 172.16.1.31
+    upstairs-hallway:
+      ansible_host: 172.16.1.32
+    bonus-room:
+      ansible_host: 172.16.1.33
+
